--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "handlebars": "^4.7.7",
     "sequelize": "^6.28.0"
   }
 }
